--- a/style.css
+++ b/style.css
@@ -1,188 +1,1 @@
-/* global styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background-color: #f9f8e4;
-}
-figure {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-section {
-  width: 100%;
-  height: auto;
-  position: relative;
-  background: #f9f8e4;
-  padding: 10px 0;
-}
-p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1em;
-}
-h1,
-h2 {
-  font-family: 'Abril Fatface', cursive;
-}
-h2 {
-  margin-bottom: 1em;
-}
-button {
-  padding: 0.3em 2em;
-  background: transparent;
-  border: 1px solid #70532d;
-  border-radius: 17px;
-}
-a,
-a:hover {
-  text-decoration: none;
-  color: inherit;
-}
-ul li {
-  list-style: none;
-  display: inline;
-
-  color: #fff;
-  margin: 0 1em;
-  padding: 0.2em 0.5em;
-}
-.row {
-  margin: auto;
-}
-/* color declaration */
-h1,
-h2 {
-  color: #a38156;
-}
-h1 span,
-h2 span,
-button,
-nav span {
-  color: #70532d;
-}
-ul li,
-footer {
-  background-color: #70532d;
-}
-/* class styles */
-nav {
-  display: flex;
-  justify-content: space-between;
-  background-color: #f9f8e4;
-  padding-top: 1em;
-}
-nav span {
-  font-family: 'Sriracha', cursive;
-  font-size: 1.2em;
-}
-section {
-  width: 100%;
-  height: auto;
-  position: relative;
-  background: #f9f8e4;
-}
-.landing-page {
-  padding: 50px 0;
-}
-.landing-page .row .col-md-6 {
-  position: relative;
-}
-.landing-page .row .col-md-6 header {
-  width: 60%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.landing-page .row .col-md-6 header h1 {
-  font-size: 3.3em;
-}
-
-.landing-page .row .col-md-6 header p {
-  margin: 1em 0;
-}
-
-.landing-page .row figure img {
-  width: 60%;
-}
-.landing-page img,
-.form-section img {
-  z-index: 99;
-  animation: imgAnimation 3s infinite 0s ease-in-out;
-}
-@keyframes imgAnimation {
-  0% {
-    transform: translateY(5%);
-  }
-  50% {
-    transform: translateY(-5%);
-  }
-  100% {
-    transform: translateY(5%);
-  }
-}
-/* benifit section */
-.benifit-section {
-  text-align: center;
-  padding: 50px 0;
-}
-.benifit-section figure {
-  height: 150px;
-}
-.benifit-section img {
-  width: 40%;
-}
-/* form section */
-.form-section {
-  padding: 50px 0;
-}
-.form-section figure img {
-  width: 60%;
-}
-.form-section h2 {
-  text-align: center;
-  margin-bottom: 2em;
-}
-.form-control {
-  background: transparent;
-  border: 1px solid #a3825660;
-}
-.form-control:focus {
-  background: transparent;
-  box-shadow: none;
-  border: 1px solid #70532d;
-}
-footer {
-  padding: 0.5em;
-  color: #fff;
-  text-align: center;
-}
-@media (max-width: 600px) {
-  ul li {
-    background-color: transparent;
-    color: #70532d;
-    margin: 0 0.5em;
-    padding: 0.2em;
-  }
-  .landing-page .row .col-md-6 header {
-    width: 100%;
-    position: relative;
-    text-align: center;
-  }
-  .landing-page .row .col-md-6 header h1 {
-    font-size: 2.5em;
-  }
-  .landing-page .row figure img {
-    width: 80%;
-  }
-  .benifit-section .col-md-4 {
-    padding: 0;
-    margin: 1em 0;
-  }
-  .benifit-section figure {
-    height: auto;
-  }
-}
+*{margin:0;padding:0;box-sizing:border-box}body{background-color:#f9f8e4}figure{display:flex;justify-content:center;align-items:center}section{width:100%;height:auto;position:relative;background:#f9f8e4;padding:10px 0}p{font-family:'Poppins',sans-serif;font-size:1em}h1,h2{font-family:'Abril Fatface',cursive}h2{margin-bottom:1em}button{padding:.3em 2em;background:transparent;border:1px solid #70532d;border-radius:17px}a,a:hover{text-decoration:none;color:inherit}ul li{list-style:none;display:inline;color:#fff;margin:0 1em;padding:.2em .5em}.row{margin:auto}h1,h2{color:#a38156}h1 span,h2 span,button,nav span{color:#70532d}ul li,footer{background-color:#70532d}nav{display:flex;justify-content:space-between;background-color:#f9f8e4;padding-top:1em}nav span{font-family:'Sriracha',cursive;font-size:1.2em}section{width:100%;height:auto;position:relative;background:#f9f8e4}.landing-page{padding:50px 0}.landing-page .row .col-md-6{position:relative}.landing-page .row .col-md-6 header{width:60%;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.landing-page .row .col-md-6 header h1{font-size:3.3em}.landing-page .row .col-md-6 header p{margin:1em 0}.landing-page .row figure img{width:60%}.landing-page img,.form-section img{z-index:99;animation:imgAnimation 3s infinite 0s ease-in-out}@keyframes imgAnimation{0%{transform:translateY(5%)}50%{transform:translateY(-5%)}100%{transform:translateY(5%)}}.benifit-section{text-align:center;padding:50px 0}.benifit-section figure{height:150px}.benifit-section img{width:40%}.form-section{padding:50px 0}.form-section figure img{width:60%}.form-section h2{text-align:center;margin-bottom:2em}.form-control{background:transparent;border:1px solid #a3825660}.form-control:focus{background:transparent;box-shadow:none;border:1px solid #70532d}footer{padding:.5em;color:#fff;text-align:center}@media (max-width:600px){ul li{background-color:transparent;color:#70532d;margin:0 .5em;padding:.2em}.landing-page .row .col-md-6 header{width:100%;position:relative;text-align:center}.landing-page .row .col-md-6 header h1{font-size:2.5em}.landing-page .row figure img{width:80%}.benifit-section .col-md-4{padding:0;margin:1em 0}.benifit-section figure{height:auto}button{margin-bottom:1em}}
