--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section {
   height: auto;
   position: relative;
   background: #f9f8e4;
-  padding: 10px 0;
+  padding: 50px 0;
 }
 p {
   font-family: 'Poppins', sans-serif;
@@ -135,12 +135,25 @@ section {
 .benifit-section img {
   width: 40%;
 }
+/* instructor */
+.instructor .col-md-4,
+.instructor .col-md-8 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.instructor ul li:first-of-type {
+  margin-left: 0;
+}
+.instructor img {
+  width: 80%;
+}
 /* form section */
 .form-section {
   padding: 50px 0;
 }
 .form-section figure img {
-  width: 60%;
+  width: 80%;
 }
 .form-section h2 {
   text-align: center;
@@ -186,6 +199,6 @@ footer {
     height: auto;
   }
   button {
-    margin-bottom: 1.5em;
+    margin-bottom: 1em;
   }
 }
